@@ -1,5 +1,6 @@
 package org.co2dice.mirai.bean.dice;
 
+import java.util.Collections;
 import java.util.List;
 
 public class ConstantDice extends Dice{
@@ -9,7 +10,7 @@ public class ConstantDice extends Dice{
 
     @Override
     public List<Integer> getDiceNumArray() {
-        return List.of(super.getDiceValue());
+        return Collections.singletonList(super.getDiceValue());
     }
 
     @Override
